<resources>
    <string name="app_name" translatable="false">Maslahah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to" translatable="false">Welcome To</string>
    <string name="lets_set_acc" translatable="false">Let\'s Set Your Account</string>
    <string name="name" translatable="false">Name</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="phone" translatable="false">Phone Number</string>
    <string name="password" translatable="false">Password</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="welcome_back" translatable="false">Welcome Back !</string>
    <string name="signin_guid_message" translatable="false">Sign Into Your Account With your Phone Number And Otp</string>
    <string name="signin_guid_message2" translatable="false">Sign Into Your Account With your Email And Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="or" translatable="false">OR</string>
    <string name="login_email" translatable="false">Login With Email And Password</string>
    <string name="login_phone" translatable="false">Login With Phone Number</string>
    <string name="forget_password" translatable="false">Forget Password ?</string>
    <string name="otp_verification" translatable="false">Otp Verification</string>
    <string name="check_opt" translatable="false">Check Your SMS Messages, We Have Sent You The PIN</string>
    <string name="verify" translatable="false">Verify To Login</string>
    <string name="have_acc" translatable="false">Already Have An Account ?</string>
    <string name="not_have_acc" translatable="false">Don\'t Have An Account ?</string>
    <string name="siginup" translatable="false">Sign Up</string>
    <string name="external_storage_message" translatable="false">Allow to use storage</string>
    <string name="create_service" translatable="false">Create Your Service</string>
    <string name="service_title" translatable="false">Service Title</string>
    <string name="title_exmple" translatable="false">for example: alex bank queue to..</string>
    <string name="more_details" translatable="false">More Details</string>
    <string name="details_eaxmple" translatable="false">for example: the location in details</string>
    <string name="appointment" translatable="false">Appointment</string>
    <string name="date_eaxmple" translatable="false">24/9/2021</string>
    <string name="time_eaxmple" translatable="false">08:30 AM</string>
    <string name="expected_duration" translatable="false">Expected Duration</string>
    <string name="duration_eaxmple" translatable="false">for example: waiting from 3:5 Hours</string>
    <string name="price_eaxmple" translatable="false">for example: 50 LE</string>
    <string name="required_paper" translatable="false">Required Papers</string>
    <string name="papers_eaxmple" translatable="false">for example: ID, Personal photo..etc</string>
    <string name="create_service_btn" translatable="false">Create Service</string>
    <string name="call" translatable="false">Call</string>
    <string name="accept_this_service" translatable="false">Accept This Service</string>
    <string name="today" translatable="false">Today</string>
    <string name="all_services" translatable="false">All Services</string>
    <string name="my_services" translatable="false">My Services</string>
    <string name="no_services_loaded" translatable="false">No Services loaded</string>
    <string name="start" translatable="false">Start ?</string>
    <string name="iam_arrived" translatable="false">I\'m Arrived</string>
    <string name="my_turn" translatable="false">My Turn Now</string>
    <string name="current_service" translatable="false">Current Service</string>
    <string name="user_have_other_service" translatable="false">You Are Already In Service</string>
    <string name="service_accepted_from_other_user" translatable="false">This Service Accepted From Aother User</string>
    <string name="can_not_accept_your_service" translatable="false">Can\'t Accept Your Service</string>
    <string name="done_terminate" translatable="false">Done, Terminate ?</string>
    <string name="service_done" translatable="false">Service Done !</string>
    <string name="worng_phone_number" translatable="false">Wrong phone Number</string>
    <string name="my_profile" translatable="false">My Profile</string>
    <string name="tasks" translatable="false">Tasks</string>
    <string name="my_balance" translatable="false">My Balance</string>
    <string name="tax" translatable="false">Tax</string>
    <string name="tasks_your_accomplished" translatable="false">Tasks Your Accomplished</string>
    <string name="language" translatable="false">Language</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="you_have_service" translatable="false">You Have Service</string>
    <string name="your_balance" translatable="false">Your Balance</string>
    <string name="tax_you_have_to_pay_it" translatable="false">Tax you have to pay it</string>
    <string name="orders_you_did" translatable="false">Orders you did</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="reset_password" translatable="false">Reset Password!</string>
    <string name="reset_guid_message" translatable="false">Okey It’s Easy Just Send Your Number</string>
    <string name="new_password" translatable="false">New Password</string>
    <string name="new_password_guid_message2" translatable="false">it is okay But Remember It Well This Time</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="confirm_new_password" translatable="false">Confirm New Password</string>
    <string name="order_guide" translatable="false">you orderd 8 times till now keep going we are here to save your time</string>
    <string name="balance_guide_first" translatable="false">WOW! you earned </string>
    <string name="balance_guide_second" translatable="false"> LE till now keep Going you are super star but don’t forget to pay your tax</string>
    <string name="tax_guide" translatable="false">WOW! you earned 2438 LE till now keep Going you are super star but don’t forget to pay your tax you should pay for this service 539 LE</string>
    <string name="task_guide" translatable="false">Great! you have accomplished this number of tasks till now keep going</string>


    <string name="facebook_app_id" translatable="false">285643153505292</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb285643153505292</string>

    <string name="add_phone_message">please add phone to complete registration</string>
    <string name="communication_info">communication info</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="price_of_service">Price of service</string>
    <string name="edit_service">Service Data</string>
    <string name="edit">save changes</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_message">If you cancel this service you will pay 10 LE Financial penalty </string>
    <string name="done_message">Did you finish this service ?</string>
    <string name="terms_polices"><![CDATA[Terms & Policy]]></string>
    <string name="terms_agree">you have should agree on terms and policy</string>
    <string name="terms_content">1- you should insert correct phone \n
        2- Funds are sent initially when the amount of 50 pounds is due -\n
    3- After sending the money, please send the transfer data to the support via telegram or private email so that the account can be activated again -\n
    4- We always welcome direct communication with users via social media \n
</string>


    <string name="suspended_message">Your account has been suspended until the tax due is paid </string>
    <string name="contact_us">Contact Us</string>
    <string name="save">Save</string>
    <string name="cancel_service">Cancel service</string>
    <string name="service_selected">Sorry,cannot update service after it was selected</string>
    <string name="service_deleted">service deleted</string>
    <string name="cancel_service_owner">Cancel service after it was selected will cause of 10 LE as tax</string>
    <string name="start_chat">start chat</string>
    <string name="pay_now">Pay Now</string>

</resources>